@@ -15,7 +15,7 @@ module MadChatter
     def new(name)
       copy_file "templates/config.yml", "#{name}/config.yml"
       copy_file "templates/extensions.rb", "#{name}/extensions.rb"
-      empty_directory "#{name}/extensions"
+      # empty_directory "#{name}/extensions"
       copy_file "templates/web/index.html", "#{name}/web/index.html"
       copy_file "templates/web/javascript.js", "#{name}/web/javascript.js"
       copy_file "templates/web/styles.css", "#{name}/web/styles.css"
