@@ -7,7 +7,12 @@
 #
 # Example:
 #
-#   on_message /hey andrew: (.+)/ do |msg|
+#   on_message /hey andrew: (.+)/ do |regex_capture|
 #     send_status_message 'Someone is talking to andrew'
 #   end
 #
+
+on_message %r{/youtube http://youtu.be/(.*)} do |youtube_id|
+  send_message "<iframe width='560' height='315' src='http://www.youtube.com/embed/#{youtube_id}' frameborder='0' allowfullscreen></iframe>"
+  stop_message_handling
+end
